[build-system]
requires = ["cmake", "ninja", "cython>=0.29"]
build-backend = "setuptools.build_meta"

[project]
name = "dftracer-reader"
version = "1.0.0"
description = "Python bindings for DFTracer gzip reader with embedded C++ libraries"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Ray Andrew", email = "ray@example.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: C++",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.7"
dependencies = []

[project.urls]
Homepage = "https://github.com/rayandrew/dftracer-utils"
Repository = "https://github.com/rayandrew/dftracer-utils"
Issues = "https://github.com/rayandrew/dftracer-utils/issues"

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]

[tool.cibuildwheel]
build = "cp37-* cp38-* cp39-* cp310-* cp311-* cp312-*"
skip = "*-win32 *-manylinux_i686"

[tool.cibuildwheel.macos]
environment = {CMAKE_BUILD_PARALLEL_LEVEL = "2"}

[tool.cibuildwheel.linux]
environment = {CMAKE_BUILD_PARALLEL_LEVEL = "2"}
before-all = "yum install -y cmake3 || apt-get update && apt-get install -y cmake"

[tool.cibuildwheel.windows]
environment = {CMAKE_BUILD_PARALLEL_LEVEL = "2"}
